# Home_work_30_Django_Users

./: db.sqlite3  manage.py  pyproject.toml
Home_work_27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_rename_is_published_ad_is_publisher.py  0003_rename_is_publisher_ad_is_published.py  0004_alter_ad_options_alter_category_options_and_more.py  0005_alter_ad_price.py  0006_alter_ad_description_alter_ad_is_published_and_more.py  0007_alter_ad_author.py  0008_selection.py  0009_rename_author_selection_owner.py
ads/urls/: ad.py  cat.py  selection.py
data/: ads.json  convert_data.py
data/data_hw_28/: ad.json  location.json  user.json
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_age.py  0004_alter_user_role.py
users/urls/: user.py
